WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139223
[Mac] Hang when calling -[AVAsset resolvedURL].
https://bugs.webkit.org/show_bug.cgi?id=139223
Summary
[Mac] Hang when calling -[AVAsset resolvedURL].
Jer Noble
Reported
2014-12-03 09:13:28 PST
[Mac] Hang when calling -[AVAsset resolvedURL].
Attachments
Patch
(3.03 KB, patch)
2014-12-03 09:17 PST
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2014-12-03 09:17:01 PST
Created
attachment 242494
[details]
Patch
WebKit Commit Bot
Comment 2
2014-12-03 10:01:05 PST
Comment on
attachment 242494
[details]
Patch Clearing flags on attachment: 242494 Committed
r176725
: <
http://trac.webkit.org/changeset/176725
>
WebKit Commit Bot
Comment 3
2014-12-03 10:01:10 PST
All reviewed patches have been landed. Closing bug.
Jer Noble
Comment 4
2014-12-03 10:21:06 PST
<
rdar://problem/19094530
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug